<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetPinActivity">


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/setPinA_setPinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pin_text"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />


    <com.goodiebag.pinview.Pinview
        android:id="@+id/setPinA_pinView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setPinA_setPinText"
        app:cursorVisible="false"
        app:inputType="number"
        app:forceKeyboard="true"
        app:password="true"
        app:pinHeight="60dp"
        app:pinLength="4"
        app:pinWidth="40dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/setPinA_confrimPinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setPinA_pinView"
        android:text="@string/confirm_pin_text"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/setPinA_pinViewConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setPinA_confrimPinText"
        app:cursorVisible="false"
        app:inputType="number"
        app:forceKeyboard="true"
        app:password="true"
        app:pinHeight="60dp"
        app:pinLength="4"
        app:pinWidth="40dp"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/setPinA_pinViewConfirm"
        android:layout_marginTop="25dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setPinA_clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:text="@string/clear_text"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_marginEnd="15dp"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/setPinA_acceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#8BC34A"
            android:text="@string/accept_text"
            android:textSize="14sp"
            android:textColor="#fff"
            android:layout_marginStart="15dp"
            />

    </LinearLayout>

</RelativeLayout>